--- a/views/partial/header.ejs
+++ b/views/partial/header.ejs
@@ -1,7 +1,7 @@
 <meta charset="UTF-8" />
-<link id="favicon" rel="icon" href="./favicon.ico" />
+<link id="favicon" rel="icon" href="/favicon.ico" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<script src="./js/ws.js"></script>
-<script src="./js/index.js"></script>
-<link rel="stylesheet" href="./css/style.css">
+<script src="/js/ws.js"></script>
+<script src="/js/index.js"></script>
+<link rel="stylesheet" href="/css/style.css">
